--- a/Modelagem/Layout/public/dash.html
+++ b/Modelagem/Layout/public/dash.html
@@ -7,9 +7,11 @@
     <title>Biblioteca UFAB</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Login-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Clean-1.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -21,9 +23,39 @@
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <p class="navbar-text">Biblioteca UFAB</p>
-                    <ul class="nav navbar-nav ml-auto"></ul><button class="btn btn-primary ml-auto btn-nav" type="button"><i class="fa fa-sign-out"></i></button></div>
+            </div>
     </div>
     </nav>
+    </div>
+    <div class="features-boxed">
+        <div class="container">
+            <div class="row justify-content-center features">
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box"><i class="fa fa-users icon"></i>
+                        <h3 class="name">Usuários</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
+                </div>
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box"><i class="fa fa-folder-open icon"></i>
+                        <h3 class="name">Itens</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
+                </div>
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box"><i class="fa fa-list-alt icon"></i>
+                        <h3 class="name">Cursos</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
+                </div>
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box"><i class="fa fa-leaf icon"></i>
+                        <h3 class="name">Alocação</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
+                </div>
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box"><i class="fa fa-handshake-o icon"></i>
+                        <h3 class="name">Empréstimos</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
+                </div>
+                <div class="col-sm-6 col-md-5 col-lg-4 item">
+                    <div class="box"><i class="fa fa-bar-chart-o icon"></i>
+                        <h3 class="name">Relatórios</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
