--- a/Modelagem/Layout/public/index.html
+++ b/Modelagem/Layout/public/index.html
@@ -7,9 +7,11 @@
     <title>Biblioteca UFAB</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Login-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Clean-1.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -18,7 +20,7 @@
     <div>
         <div class="container container-index">
             <div class="row justify-content-center align-items-center align-content-center align-self-center" style="height: 100vh;">
-                <div class="col-auto col-md-6 justify-content-center align-items-center align-content-center align-self-center text-center" data-aos="fade-right"><i class="fa fa-book" style="font-size:181px;color:#7ab73d;"></i>
+                <div class="col-auto col-md-6 justify-content-center align-items-center align-content-center align-self-center text-center" data-aos="fade-right"><i class="fa fa-book icon-custom"></i>
                     <div class="align-items-center align-content-center align-self-center div-name-ufab">
                         <h2 class="d-inline-flex"><em>Biblioteca</em></h2>
                         <h1 class="d-inline-flex"><strong>&nbsp;UFAB</strong><br></h1>
