--- a/Modelagem/Layout/public/login.html
+++ b/Modelagem/Layout/public/login.html
@@ -7,9 +7,11 @@
     <title>Biblioteca UFAB</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/Features-Boxed.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Login-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/Navigation-Clean-1.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -18,7 +20,7 @@
     <div class="login-clean">
         <form method="post" data-aos="fade-up" data-aos-duration="1000">
             <h2 class="sr-only">Login Form</h2>
-            <div class="illustration"><i class="fa fa-book"></i>
+            <div class="illustration"><i class="fa fa-book icon-custom"></i>
                 <div class="d-flex align-items-center align-content-center align-self-center div-name-ufab">
                     <h2 class="d-inline-flex"><em>Biblioteca</em></h2>
                     <h1 class="d-inline-flex"><strong>&nbsp;UFAB</strong><br></h1>
