--- a/Modelagem/Layout/public_bianca/dash.html
+++ b/Modelagem/Layout/public_bianca/dash.html
@@ -43,7 +43,7 @@
                         <h3 class="name">Cursos</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
-                    <div class="box"><i class="fa fa-leaf icon"></i>
+                    <div class="box"><i class="fa fa-sitemap icon"></i>
                         <h3 class="name">Alocação</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
