--- a/Modelagem/Layout/public_bianca/Item.html
+++ b/Modelagem/Layout/public_bianca/Item.html
@@ -35,7 +35,7 @@
     <div class="justify-content-center align-items-center align-content-center align-self-center" style="/*height:100vh;*/overflow-y:auto;">
         <div class="container-fluid d-flex justify-content-center container-form">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 d-inline-flex align-self-end box-app" data-aos="fade-down" data-aos-delay="250">
-                <h1>Usuários -&nbsp;<i class="fa fa-users"></i></h1>
+                <h1>Itens-&nbsp;<i class="fa fa-folder-open"></i></h1>
             </div>
         </div>
         <hr>
@@ -43,14 +43,45 @@
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 box-overlay-app" data-aos="fade-right" data-aos-delay="500">
                 <form class="box-app">
                     <div class="form-group">
-                        <h4 class="text-left">Nome:</h4><input class="form-control form-control" type="text" disabled="" required="" maxlength="100" minlength="10" autofocus=""></div>
+                        <h4 class="text-left">Nome:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
                     <div class="form-group">
-                        <h4 class="text-left">Data de nascimento:</h4><input class="form-control form-control" type="text" disabled="" required="" placeholder="##/##/###" maxlength="100" minlength="10" autofocus=""></div>
+                        <h4 class="text-left">Título:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
                     <div class="form-group">
-                        <h4 class="text-left">Endereço:</h4><input class="form-control form-control" type="text" disabled="" required="" maxlength="100" minlength="10" autofocus=""></div>
+                        <h4 class="text-left">Tipo de Item:</h4><select class="form-control"></select></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Edição:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Data:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Autor:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Isbn:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Tema:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Editora:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Ano de publicação:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Número de Páginas:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Área:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Data de Gravação:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Data de Publicação:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Local:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Orientador:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Ano de Defesa:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
+                    <div class="form-group">
+                        <h4 class="text-left">Quantidade do Item:</h4><input class="form-control form-control" type="text" required="" maxlength="100" minlength="10" autofocus=""></div>
                     <div class="form-row">
                         <div class="col"><button class="btn btn-success btn-block" type="button">Inserir</button></div>
                         <div class="col"><button class="btn btn-primary btn-block" type="button">Atualizar</button></div>
+                        <div class="col"><button class="btn btn-danger btn-block" type="button">Remover</button></div>
                     </div>
                 </form>
             </div>
@@ -59,40 +90,54 @@
                     <table class="table table-striped table-hover table-sm">
                         <thead>
                             <tr>
-                                <th>CPF</th>
                                 <th>Nome</th>
+                                <th>Título</th>
+                                <th>Tipo Item</th>
+                                <th>Quantidade</th>
                                 <th>Ação</th>
                             </tr>
                         </thead>
                         <tbody class="justify-content-center align-items-center align-content-center">
                             <tr>
-                                <td>117.765.994-54</td>
-                                <td>Sérgio Davi</td>
+                                <td>Livro</td>
+                                <td>A história da matemática</td>
+                                <td>Livro</td>
+                                <td>5</td>
                                 <td class="d-inline float-left"><button class="btn btn-light btn-table" type="button"><i class="fa fa-edit"></i></button></td>
                             </tr>
                             <tr>
-                                <td>117.765.994-54</td>
-                                <td>Sérgio Davi</td>
+                                <td>Revista&nbsp;</td>
+                                <td>Revista Teste</td>
+                                <td>Revista</td>
+                                <td>1</td>
                                 <td class="d-inline float-left"><button class="btn btn-light btn-table" type="button"><i class="fa fa-edit"></i></button></td>
                             </tr>
                             <tr>
-                                <td>117.765.994-54</td>
-                                <td>Sérgio Davi</td>
+                                <td>TCC</td>
+                                <td>Exemplo de TCC</td>
+                                <td>Trabalho de Conclusão</td>
+                                <td>1</td>
                                 <td class="d-inline float-left"><button class="btn btn-light btn-table" type="button"><i class="fa fa-edit"></i></button></td>
                             </tr>
                             <tr>
-                                <td>117.765.994-54</td>
-                                <td>Sérgio Davi</td>
+                                <td>CD</td>
+                                <td>Meu trabalho de Conclusão</td>
+                                <td>Mídia Digital</td>
+                                <td>2</td>
                                 <td class="d-inline float-left"><button class="btn btn-light btn-table" type="button"><i class="fa fa-edit"></i></button></td>
                             </tr>
                             <tr>
-                                <td>117.765.994-54</td>
-                                <td>Sérgio Davi</td>
+                                <td>Jornal</td>
+                                <td>Exemplo de Jornal</td>
+                                <td>Jornal</td>
+                                <td>6</td>
                                 <td class="d-inline float-left"><button class="btn btn-light btn-table" type="button"><i class="fa fa-edit"></i></button></td>
                             </tr>
                             <tr>
-                                <td>117.765.994-54</td>
-                                <td>Sérgio Davi</td>
+                                <td>Artigo</td>
+                                <td>Meu artigo</td>
+                                <td>Anais de Congresso</td>
+                                <td>2</td>
                                 <td class="d-inline float-left"><button class="btn btn-light btn-table" type="button"><i class="fa fa-edit"></i></button></td>
                             </tr>
                         </tbody>
