--- a/Modelagem/Layout/public_davi/dash.html
+++ b/Modelagem/Layout/public_davi/dash.html
@@ -1,13 +1,10 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"%>
-<%@ page isELIgnored="false"%>
- <%@ taglib prefix="sec" uri="http://www.springframework.org/security/tags" %>
- <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biblioteca UFAB</title>
+    <title>Biblioteca UFAB_Davi</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Features-Boxed.css">
@@ -20,28 +17,19 @@
 </head>
 
 <body>
-    <%-- NavBar --%>
     <div>
         <nav class="navbar navbar-dark navbar-expand-md navigation-clean" style="background-color:#7ab73d;color:rgb(255,255,255);">
             <div class="container"><a class="navbar-brand" href="#"><i class="fa fa-book"></i></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <p class="navbar-text">Biblioteca UFAB</p>
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="dropdown"><a class="dropdown-toggle nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="#">${usuarioAuth.getNomeCompleto()} - ${usuarioAuth.getPerfil().getTipoPerfil().toString()}</a>
-                            <div class="dropdown-menu justify-content-center align-content-center" role="menu">
-                            <a class="dropdown-item text-capitalize justify-content-center align-items-center align-self-center" role="presentation" href="<c:url value='/logout'/>">Sair</a></div>
-                        </li>
-                    </ul>
             </div>
     </div>
     </nav>
     </div>
-    <%-- Fim NavBar --%>
     <div class="features-boxed">
         <div class="container">
             <div class="row justify-content-center features">
-              
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="fa fa-users icon"></i>
                         <h3 class="name">Usuários</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
@@ -55,7 +43,7 @@
                         <h3 class="name">Cursos</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
-                    <div class="box"><i class="fa fa-sitemap icon"></i>
+                    <div class="box"><i class="fa fa-leaf icon"></i>
                         <h3 class="name">Alocação</h3><button class="btn btn-success btn-block" type="button"><i class="fa fa-cog"></i>&nbsp;Gerenciar</button></div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
